2007-12-09  Piotr Fusik  <fox@scene.pl>
* asap.c: determine duration of TM2 music

* win32/winamp/in_asap.c: group similar file types


2007-12-08  Piotr Fusik  <fox@scene.pl>
* asap.c: determine duration of TMC music


2007-12-02  Piotr Fusik  <fox@scene.pl>
* asap.c: determine duration of MPT/MPD music


2007-11-26  Piotr Fusik  <fox@scene.pl>
* asap.c, asap_internal.h, java/ASAP.ppjava: determine duration of CMC/CMR/DMC
  music


2007-11-24  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: improved hi-pass filters


2007-11-08  Piotr Fusik  <fox@scene.pl>
* asapscan.c: improved LOOP detection


** 1.0.2 released on 2007-11-02

2007-11-02  Piotr Fusik  <fox@scene.pl>
* win32/gui.c, win32/gui.h, win32/gui.rc, win32/wasap/wasap.c,
  win32/winamp/in_asap.c: fixed loading a new file when the file information
  window is open; minor refactoring

* configure.ac, INSTALL: MOC 2.4.3


2007-10-28  Piotr Fusik  <fox@scene.pl>
* asap.c, win32/gui.c, win32/gui.h, win32/gui.rc, win32/wasap/wasap.c,
  win32/winamp/in_asap.c: TIME tag editor

* asap.h, configure.ac, win32/Makefile, NEWS: version 1.0.2


2007-10-06  Piotr Fusik  <fox@scene.pl>
* asap.h, java/ASAP.ppjava: reduced delta_buffer from 1024 to 888 bytes

* asapscan.c: corrected "cannot open" error message


2007-09-14  Piotr Fusik  <fox@scene.pl>
* win32/wasap/wasap.c: the menu appears when the right button is released
  - this fixes the problem of the taskbar menu opening on top of WASAP's menu


2007-08-19  Piotr Fusik  <fox@scene.pl>
* java/Makefile: added "-source 1.2" option for new Java compilers

* win32/wasap/wasap.c, win32/gui.c, win32/gui.h: made Tab and Alt+letter work
  in the file information window of WASAP

* win32/wasap/wasap.c: playback did not stop when the file browser was open


2007-07-05  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: channel mute works for hi-pass filters

* asap.c: IRQST=0xff for the extra POKEY; skip trailing "end-of-song" marks
  in detection of subsongs in CMC
