@@ -1,3 +1,7 @@
+2007-12-15  Piotr Fusik  <fox@scene.pl>
+* asap.c: determine duration of RMT music
+
+
 2007-12-09  Piotr Fusik  <fox@scene.pl>
 * asap.c: determine duration of TM2 music
 
